<resources>
    <string name="app_name">Expenses</string>

    <string name="not_connected">Still not connected? SignUp Now</string>
    <string name="sign_in_txt">SIGN IN</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="signup_text">Sign-up</string>

    <string name="positive_amount">+%d</string>
    <string name="negative_amount">-%d</string>
    <string name="delete_button">Delete</string>
    <string name="uncategorized_chip">Uncategorized</string>
    <string name="title_text_field">Title</string>
    <string name="amount_text_field">Amount</string>
    <string name="category_auto_complete">category</string>
    <string name="type_dropdown">Type</string>
    <string name="expense_button">Expense</string>
    <string name="income_button">Income</string>
    <string name="date_text_field">Date</string>
    <string name="transactions_menu">Transactions</string>
    <string name="categories_menu">Categories</string>
    <string name="month_menu">Change Month</string>
    <string name="logout_menu">Logout</string>
    <string name="menu_refresh">Refresh</string>
    <string name="empty_list">No transactions found, try changing the month or start adding new ones</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="amount_gained">Amount gained from this category</string>
    <string name="amount_spent">Amount spent from this category</string>
    <string name="zero_difference">No expenses/income from this category</string>
    <string name="register_txt">New User</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register_text">Register</string>
    <string name="connected">Already connected? Sign in now</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm_password_hint">Confirm Password</string>
</resources>