<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="RegisterFragmentBinding">
        <variable
            name="viewModel"
            type="com.motawfik.expenses.viewmodel.RegisterViewModel"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            tools:context=".MainActivity">


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/register_txt"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="48dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <EditText
                    android:id="@+id/firstNameEditText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_corner"
                    android:drawableStart="@drawable/ic_baseline_account_box_30"
                    android:ems="10"
                    android:hint="@string/first_name"
                    android:text="@={viewModel.firstName}"
                    app:userName="@{viewModel.firstName}" />

                <EditText
                    android:id="@+id/lastNameEditText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_corner"
                    android:drawableStart="@drawable/ic_baseline_account_box_30"
                    android:ems="10"
                    android:hint="@string/last_name"
                    android:text="@={viewModel.lastName}"
                    app:userName="@{viewModel.lastName}"/>

            </LinearLayout>


            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="48dp"
                android:background="@drawable/rounded_corner"
                android:drawableStart="@drawable/ic_baseline_email_30"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textWebEmailAddress"
                android:text="@={viewModel.email}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:email="@{viewModel.email}"/>


            <LinearLayout
                android:id="@+id/password_confirmation"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="48dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailEditText">


                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:background="@drawable/rounded_corner"
                    android:drawableStart="@drawable/ic_baseline_lock_30"
                    android:ems="10"
                    android:layout_marginEnd="4dp"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}"
                    app:password="@{viewModel.password}"/>

                <EditText
                    android:id="@+id/confirmationPasswordEditText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:background="@drawable/rounded_corner"
                    android:drawableStart="@drawable/ic_baseline_lock_30"
                    android:ems="10"
                    android:hint="@string/confirm_password_hint"
                    android:inputType="textPassword"
                    android:text="@={viewModel.confirmPassword}"
                    app:actualPassword="@{viewModel.password}"
                    app:confirmPassword="@{viewModel.confirmPassword}"/>
            </LinearLayout>

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/register_text"
                android:onClick="@{()->viewModel.register()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_confirmation"
                app:userFirstName="@{viewModel.firstName}"
                app:userLastName="@{viewModel.lastName}"
                app:userEmail="@{viewModel.email}"
                app:userPassword="@{viewModel.password}"
                app:userConfirmPassword="@{viewModel.confirmPassword}" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connected"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerBtn"
                app:layout_constraintVertical_bias="0.089" />

            <Button
                android:id="@+id/signUpBtb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:text="@string/sign_in"
                android:onClick="@{()->viewModel.navigateToLogin()}"
                app:backgroundTint="@android:color/holo_green_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</layout>